# cna_optimization

./: .gitignore  CMakeLists.txt  README.md  prueba.json
include/genetic_algorithm/: definitions.hpp  openGA.hpp
include/network_model/: entanglement_interface.hpp  instruction.hpp  instruction_table.hpp  network.hpp  node.hpp
network_config/: network.json  star_topology.json
src/: genetic_algorithm.cpp
src/network_model/: entanglement_interface.cpp  instruction.cpp  instruction_table.cpp  network.cpp  node.cpp
